--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,6 +21,7 @@ android {
 
 dependencies {
     compile project(path: ':multi-image-selector')
+    compile project(':baseframe')
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'com.jakewharton:butterknife:7.0.1'
@@ -40,4 +41,7 @@ dependencies {
 //    滑动销毁Activity
     compile 'me.imid.swipebacklayout.lib:library:1.0.0'
 
+//    RxJava
+    compile 'io.reactivex:rxjava:1.1.3'
+    compile 'io.reactivex:rxandroid:1.1.0'
 }
