--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,8 @@
         </activity>
 
         <activity android:name="base.image_selector.MultiImageSelectorActivity"/>
+
+        <activity android:name=".gifmake.GifMakeActivity"/>
     </application>
 
 </manifest>
