--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,6 +22,7 @@ android {
 dependencies {
     compile project(path: ':multi-image-selector')
     compile project(':baseframe')
+    compile project(':gifview')
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'com.jakewharton:butterknife:7.0.1'
@@ -44,4 +45,8 @@ dependencies {
 //    RxJava
     compile 'io.reactivex:rxjava:1.1.3'
     compile 'io.reactivex:rxandroid:1.1.0'
+
+    compile 'me.drakeet.materialdialog:library:1.3.1'
+
+    compile 'com.felipecsl:gifimageview:2.1.0'
 }
