--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.neenbedankt.android-apt'
 
 android {
     compileSdkVersion 23
@@ -18,6 +19,8 @@ android {
         }
     }
 }
+
+def dbflow_version = "3.1.1"
 
 dependencies {
     compile project(path: ':multi-image-selector')
@@ -48,5 +51,12 @@ dependencies {
 
     compile 'me.drakeet.materialdialog:library:1.3.1'
 
+//    gif图片显示
     compile 'com.felipecsl:gifimageview:2.1.0'
+
+//   dbflow数据库
+    apt "com.github.Raizlabs.DBFlow:dbflow-processor:${dbflow_version}"
+    // use kapt for kotlin apt
+    compile "com.github.Raizlabs.DBFlow:dbflow-core:${dbflow_version}"
+    compile "com.github.Raizlabs.DBFlow:dbflow:${dbflow_version}"
 }
