--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,12 +23,11 @@ android {
 def dbflow_version = "3.1.1"
 
 dependencies {
-    compile project(path: ':multi-image-selector')
     compile project(':baseframe')
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:23.1.0'
+    compile 'com.android.support:appcompat-v7:23.3.0'
     compile 'com.jakewharton:butterknife:7.0.1'
-    compile 'com.android.support:design:23.1.0'
+    compile 'com.android.support:design:23.3.0'
     compile 'org.greenrobot:eventbus:3.0.0'
     compile 'com.getbase:floatingactionbutton:1.10.1'
 
@@ -58,4 +57,7 @@ dependencies {
     // use kapt for kotlin apt
     compile "com.github.Raizlabs.DBFlow:dbflow-core:${dbflow_version}"
     compile "com.github.Raizlabs.DBFlow:dbflow:${dbflow_version}"
+
+//    Glide图片加载
+    compile 'com.github.bumptech.glide:glide:3.7.0'
 }
