--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,33 +31,27 @@ dependencies {
     compile 'org.greenrobot:eventbus:3.0.0'
     compile 'com.getbase:floatingactionbutton:1.10.1'
 
-//    圆形图片
     compile 'de.hdodenhof:circleimageview:2.0.0'
 
-//    按键波纹效果
     compile 'com.balysv:material-ripple:1.0.2'
 
-//    沉浸栏
     compile 'com.readystatesoftware.systembartint:systembartint:1.0.3'
 
-//    滑动销毁Activity
     compile 'me.imid.swipebacklayout.lib:library:1.0.0'
 
-//    RxJava
     compile 'io.reactivex:rxjava:1.1.3'
     compile 'io.reactivex:rxandroid:1.1.0'
 
     compile 'me.drakeet.materialdialog:library:1.3.1'
 
-//    gif图片显示
     compile 'com.felipecsl:gifimageview:2.1.0'
 
-//   dbflow数据库
     apt "com.github.Raizlabs.DBFlow:dbflow-processor:${dbflow_version}"
     // use kapt for kotlin apt
     compile "com.github.Raizlabs.DBFlow:dbflow-core:${dbflow_version}"
     compile "com.github.Raizlabs.DBFlow:dbflow:${dbflow_version}"
 
-//    Glide图片加载
     compile 'com.github.bumptech.glide:glide:3.7.0'
+
+    compile 'com.android.support:cardview-v7:23.3.0'
 }
