--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,28 +2,29 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.beiing.lilinote">
 
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.CAMERA"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.CAMERA" />
 
     <application
+        android:name="base.application.LiLiNoteApp"
         android:allowBackup="true"
         android:icon="@mipmap/lili"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/DeepPurpleTheme"
-        android:name="base.application.LiLiNoteApp">
-        <activity android:name=".main.ui.MainActivity">
+        android:theme="@style/DeepPurpleTheme">
+        <activity android:name=".main.activity.MainActivity">
+        </activity>
+        <activity android:name="base.image_selector.MultiImageSelectorActivity" />
+        <activity android:name=".gifmake.GifMakeActivity" />
+        <activity android:name=".setting.SettingActivity" />
+        <activity android:name=".main.activity.LauchActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <activity android:name="base.image_selector.MultiImageSelectorActivity"/>
-
-        <activity android:name=".gifmake.GifMakeActivity"/>
     </application>
 
 </manifest>
