--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,12 +9,11 @@
     <application
         android:name="base.application.LiLiNoteApp"
         android:allowBackup="true"
-        android:icon="@mipmap/lili"
+        android:icon="@drawable/app_launture"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/DeepPurpleTheme">
-        <activity android:name=".main.activity.MainActivity">
-        </activity>
+        <activity android:name=".main.activity.MainActivity" />
         <activity android:name="base.image_selector.MultiImageSelectorActivity" />
         <activity android:name=".gifmake.GifMakeActivity" />
         <activity android:name=".setting.SettingActivity" />
@@ -25,6 +24,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".note.NoteEditActivity" />
+        <activity android:name=".strength.StrengthActivity"></activity>
     </application>
 
 </manifest>
