--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,6 +24,7 @@ def dbflow_version = "3.1.1"
 
 dependencies {
     compile project(':baseframe')
+    compile project(':SmoothCheckBox')
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.3.0'
     compile 'com.jakewharton:butterknife:7.0.1'
@@ -56,4 +57,7 @@ dependencies {
     compile 'com.github.bumptech.glide:glide:3.7.0'
 
     compile 'com.android.support:cardview-v7:23.3.0'
+
+
+    compile 'com.google.code.gson:gson:2.7'
 }
