--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,8 @@
         <activity android:name=".note.NoteEditActivity" />
         <activity android:name=".strength.activity.StrengthActivity" />
         <activity android:name=".strength.activity.AddStrengthActivity" />
-        <activity android:name=".strength.activity.ProjectsActivity"></activity>
+        <activity android:name=".strength.activity.ProjectsActivity" />
+        <activity android:name=".strength.activity.AddProjectActivity"></activity>
     </application>
 
 </manifest>
