--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,4 +63,5 @@ dependencies {
 
     compile 'cn.qqtheme.framework:AndroidPicker:latest.integration'
 
+    compile 'com.cocosw:bottomsheet:1.3.0'
 }
