--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,10 +26,12 @@
         </activity>
         <activity android:name=".note.NoteEditActivity" />
         <activity android:name=".strength.activity.StrengthActivity" />
-        <activity android:name=".strength.activity.AddStrengthActivity"
-            android:windowSoftInputMode="stateHidden"/>
+        <activity
+            android:name=".strength.activity.AddStrengthActivity"
+            android:windowSoftInputMode="stateHidden" />
         <activity android:name=".strength.activity.ProjectsActivity" />
-        <activity android:name=".strength.activity.AddProjectActivity"></activity>
+        <activity android:name=".strength.activity.AddProjectActivity" />
+        <activity android:name=".strength.activity.StrengthPlanActivity"></activity>
     </application>
 
 </manifest>
